; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_telnet.c_telnet_done.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_telnet.c_telnet_done.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }
%struct.TELNET = type { i32* }

@CURLE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.connectdata*, i32, i32)* @telnet_done to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @telnet_done(%struct.connectdata* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.connectdata*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TELNET*, align 8
  store %struct.connectdata* %0, %struct.connectdata** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load %struct.connectdata*, %struct.connectdata** %5, align 8
  %10 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %9, i32 0, i32 0
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to %struct.TELNET*
  store %struct.TELNET* %15, %struct.TELNET** %8, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load %struct.TELNET*, %struct.TELNET** %8, align 8
  %19 = icmp ne %struct.TELNET* %18, null
  br i1 %19, label %22, label %20

20:                                               ; preds = %3
  %21 = load i32, i32* @CURLE_OK, align 4
  store i32 %21, i32* %4, align 4
  br label %37

22:                                               ; preds = %3
  %23 = load %struct.TELNET*, %struct.TELNET** %8, align 8
  %24 = getelementptr inbounds %struct.TELNET, %struct.TELNET* %23, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  %26 = call i32 @curl_slist_free_all(i32* %25)
  %27 = load %struct.TELNET*, %struct.TELNET** %8, align 8
  %28 = getelementptr inbounds %struct.TELNET, %struct.TELNET* %27, i32 0, i32 0
  store i32* null, i32** %28, align 8
  %29 = load %struct.connectdata*, %struct.connectdata** %5, align 8
  %30 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %29, i32 0, i32 0
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = call i32 @Curl_safefree(i64 %34)
  %36 = load i32, i32* @CURLE_OK, align 4
  store i32 %36, i32* %4, align 4
  br label %37

37:                                               ; preds = %22, %20
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @curl_slist_free_all(i32*) #1

declare dso_local i32 @Curl_safefree(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
